@@ -23,6 +23,9 @@
 	* doc/src/ns_accesslog.man:
 	* doc/src/mann/ns_accesslog.man: Update and move.
 
+	* nslog/nslog.c: Fix mix-up with static/dynamic memory and the result
+	from the [ns_accesslog file] command.
+
 2007-08-22  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* nsd/connio.c (ConnSend):
